# shareable-ai-md-docs

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/agent_docs_cli/: __init__.py  cli.py  config.py  errors.py  git_ops.py  paths.py  state.py
src/disgust_docs_cli/: __init__.py  cli.py  config.py  errors.py  git_ops.py  paths.py  skill_installer.py  state.py
src/disgust_docs_cli/resources/skills/disgust-docs/: SKILL.md
src/disgust_docs_cli/resources/skills/disgust-docs/agents/: openai.yaml
src/disgust_docs_cli/resources/skills/disgust-docs/templates/: disgust-docs.yml  publish.md
tests/: test_cli_integration.py  test_config.py
