[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-docs"
version = "0.1.0"
description = "CLI for sharing product Markdown documentation with local agent projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Docs Contributors" }
]
dependencies = []

[project.scripts]
agent-docs = "agent_docs_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_docs_cli = ["py.typed"]
