[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disgust-docs"
version = "0.1.1"
description = "CLI for sharing product Markdown documentation with local agent projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Aleksandr Lebed" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/LebedAlIv2601/shareable-ai-md-docs"
Repository = "https://github.com/LebedAlIv2601/shareable-ai-md-docs"
Issues = "https://github.com/LebedAlIv2601/shareable-ai-md-docs/issues"

[project.scripts]
disgust-docs = "disgust_docs_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
disgust_docs_cli = [
  "py.typed",
  "resources/skills/disgust-docs/SKILL.md",
  "resources/skills/disgust-docs/agents/openai.yaml",
  "resources/skills/disgust-docs/templates/publish.md",
  "resources/skills/disgust-docs/templates/disgust-docs.yml",
]
